feat: wip: update measure parsing
[#OCD-3834]