@@ -21,7 +21,6 @@ import gov.healthit.chpl.domain.CertificationCriterion;
 import gov.healthit.chpl.domain.ListingMeasure;
 import gov.healthit.chpl.domain.Measure;
 import gov.healthit.chpl.domain.MeasureType;
-import gov.healthit.chpl.service.CertificationCriterionService;
 import gov.healthit.chpl.upload.listing.Headings;
 import gov.healthit.chpl.upload.listing.ListingUploadHandlerUtil;
 import lombok.extern.log4j.Log4j2;
@@ -30,13 +29,10 @@ import lombok.extern.log4j.Log4j2;
 @Log4j2
 public class MeasuresUploadHandler {
     private ListingUploadHandlerUtil uploadUtil;
-    private CertificationCriterionService criteriaService;
 
     @Autowired
-    public MeasuresUploadHandler(ListingUploadHandlerUtil uploadUtil,
-            CertificationCriterionService criteriaService) {
+    public MeasuresUploadHandler(ListingUploadHandlerUtil uploadUtil) {
         this.uploadUtil = uploadUtil;
-        this.criteriaService = criteriaService;
     }
 
     public List<ListingMeasure> parseAsMeasures(CSVRecord headingRecord, List<CSVRecord> listingRecords)
@@ -119,8 +115,8 @@ public class MeasuresUploadHandler {
                     .map(String::trim)
                     .collect(Collectors.toList());
             associatedCriteria.addAll(splitTrimmedCriteriaNumbers.stream()
-                    .flatMap(criterionNumber -> buildCriterion(criterionNumber).stream())
-                    .toList());
+                    .map(criterionNumber -> buildCriterion(criterionNumber))
+                    .collect(Collectors.toList()));
         }
 
         return ListingMeasure.builder()
@@ -133,12 +129,9 @@ public class MeasuresUploadHandler {
                 .build();
     }
 
-    private List<CertificationCriterion> buildCriterion(String criterionNumber) {
-        List<CertificationCriterion> criteria = criteriaService.getByNumber(criterionNumber);
-        if (CollectionUtils.isEmpty(criteria)) {
-            LOGGER.warn("No criteria was found with number '" + criterionNumber + "'.");
-            return new ArrayList<CertificationCriterion>();
-        }
-        return criteria;
+    private CertificationCriterion buildCriterion(String criterionNumber) {
+        return CertificationCriterion.builder()
+                .number(criterionNumber)
+                .build();
     }
 }
